# Kinetix

./: .gitignore  MANIFEST.in  README.md  docs.md  plr.py  ppo.py  pyproject.toml  sfl.py  test.ipynb
configs/: plr.yaml  ppo.yaml  sfl.yaml
configs/env/: pixels.yaml
configs/learning/: ppo-base.yaml  ppo-sfl.yaml
configs/misc/: misc.yaml
configs/model/: model-perm-invariant-mlp.yaml
docs/: README.md  configs.md
examples/: example_auto_reset.py  example_inference.py  example_premade_level_replay.py  example_random_level_replay.py
experiments/: plr.py  ppo.py  sfl.py
kinetix/: editor.py
kinetix/environment/: __init__.py  env.py  utils.py
kinetix/environment/ued/: distributions.py  mutators.py  ued.py
kinetix/util/: __init__.py  config.py  learning.py  saving.py
test/: inverse_render_test copy.py  inverse_render_test.py
worlds/custom/: my_custom_level.json
